--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root{
+    --main-green: #01bf71;
+    --second-white: #fff;
+    --txt-white: #fff;
+    --txt-green: #01bf71;
+
+    --box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    --sidebar-width: 300px;
+    --border-radius: 15px;
+
+
+}
