--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,13 @@
     --txt-white: #fff;
     --txt-green: #01bf71;
 
+    --danger-red :#cd4747;
+
     --box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     --sidebar-width: 300px;
     --border-radius: 10px;
 
     --main-green-hover: #068550;
+    --danger-red-hover: #ff7777;
 
 }
